# PrusaCameraConnect

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  justfile  pyproject.toml
src/prusacameraconnect/: example-config.yaml  main.py
src/prusacameraconnect/Camera/: ImageUrl.py  VideoUrl.py  __init__.py
src/prusacameraconnect/Config/: __init__.py
src/prusacameraconnect/PrusaAPI/: __init__.py
src/prusacameraconnect/PrusaConnectAPI/: __init__.py
src/prusacameraconnect/Types/: __init__.py
src/prusacameraconnect/plugins/: __init__.py
src/prusacameraconnect/plugins/SpaghettiDetective/: __init__.py
