[project]
name = "PrusaCameraConnect"
version = "1.0.0"
description = "Generic camera relay for PrusaConnect"
authors = [{ name = "Private Butts", email = "inquiries@privatebutts.dev" }]
dependencies = [
    "aiohttp[speedups]>=3.9.1",
    "Pillow>=10.2.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "strictyaml>=1.7.3",
    "opencv-python>=4.9.0.80",
    "aiogram>=3.3.0",
    "aiosmtplib>=3.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "debugpy>=1.8.1",
    "watchdog>=4.0.0",
]
[tool.ruff]
line-length = 100
ignore = ["D203"]

[tool.black]
line-length = 100
target-version = ['py311']
